[tool.poetry]
name = "graphlib_backport"
version = "1.0.2"
description = "Backport of the Python 3.9 graphlib module for Python 3.6+"
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "PSF"
packages = [
    {include="graphlib"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
