[tool.poetry]
name = "graphlib_backport"
version = "1.0.3"
description = "Backport of the Python 3.9 graphlib module for Python 3.6+"
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "PSF"
packages = [
    {include="graphlib"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.ruff]
select = [
    "A",  # flake8-builtins
    "E",  # Flake8
    "F",  # Flake8
    "I",  # isort
#    "D",  # pydocstyle
    "RUF",  # ruff specific rules
]
ignore = ["E501", "E712"]
target-version = "py36"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
