[tool.poetry]
name = "graphlib_backport"
version = "1.0.3"
description = "Backport of the Python 3.9 graphlib module for Python 3.6+"
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "PSF"
homepage = "https://github.com/mariushelf/graphlib_backport"
repository = "https://github.com/mariushelf/graphlib_backport"
documentation = "https://github.com/mariushelf/graphlib_backport"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Python Software Foundation License",
]
packages = [
    {include="graphlib"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.ruff]
select = [
    "A",  # flake8-builtins
    "E",  # Flake8
    "F",  # Flake8
    "I",  # isort
#    "D",  # pydocstyle
    "RUF",  # ruff specific rules
]
ignore = [
    "E501",  # LineTooLong
    "E712",  # TrueFalseComparison
    "E741",  # AmbiguousVariableName
]
target-version = "py37"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # UnusedImport
    "F403",  # ImportStarUsed
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
